--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <td><label for="">Password:</label></td>
 <td><input type="Password"></td></tr>
 </table>
-<button >submit</button>
+<button><a href="https://mohanpr123.github.io/test.io/?Username=">SUBMIT</a></button>
 
 </center>
 </form></fieldset></div>
