--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <td><label for="">Password:</label></td>
 <td><input type="Password"></td></tr>
 </table>
-<button><a href="form.html">SUBMIT</a></button>
+<button><a href="https://github.com/mohanpr123/test.io/blob/511b5d5022c4361292e6326d5c344404eafa0b0e/form.html">SUBMIT</a></button>
 
 </center>
 </form></fieldset></div>
