--- a/index.html
+++ b/index.html
@@ -12,7 +12,28 @@
 <td><label for="">Password:</label></td>
 <td><input type="Password"></td></tr>
 </table>
-<button><a href="https://github.com/mohanpr123/test.io/blob/511b5d5022c4361292e6326d5c344404eafa0b0e/form.html">SUBMIT</a></button>
+<button><a href="<html>
+    <link rel="styleSheet" href="./loginBackg.css">
+<body><div id="two">
+<fieldset align="center" id="one">
+<legend style="background-color:blue;"><b><font color="white">LOGIN</font></B></legend><center><table>
+<form>
+<tr>
+<td><label for="">Username:</label></td>
+<td><input type="Text" name="Username"></td></tr>
+<tr>
+<tr><td></td></tr>
+<td><label for="">Password:</label></td>
+<td><input type="Password"></td></tr>
+</table>
+<button><a href="form.html">SUBMIT</a></button>
+
+</center>
+</form></fieldset></div>
+
+
+</body>
+</html>">SUBMIT</a></button>
 
 </center>
 </form></fieldset></div>
